--- a/backend-auth-jwt/order-ui/package.json
+++ b/backend-auth-jwt/order-ui/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "axios": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^5.0.2",
-    "axios": "^1.9.0",
     "react-router-dom": "^7.6.2",
-    "semantic-ui-react": "^2.1.5"
+    "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.5",
+    "sockjs-client": "^1.6.1",
+    "web-vitals": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
